--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -21,7 +21,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text="@{post.title}"
-                android:textSize="18sp"
+                android:textColor="@color/color_post_title"
+                android:textSize="@dimen/post_title_text_size"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="title" />
@@ -32,6 +34,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="@{post.body}"
+                android:textColor="@color/color_post_body"
+                android:textSize="@dimen/post_body_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/card_post_title"
                 app:layout_constraintTop_toBottomOf="@+id/card_post_title"
