--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -18,21 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:elevation="4dp"
-                app:titleTextColor="@color/colorActionBarTitle"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:menu="@menu/menu_main" />
-
-        </com.google.android.material.appbar.AppBarLayout>
-
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -45,19 +30,21 @@
 
 
                 <ProgressBar
-                    style="@android:style/Widget.Holo.ProgressBar"
+                    style="@style/Widget.AppCompat.ProgressBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@id/divider2"
-                    app:visibility="@{viewmodel.isLoading()}" />
+                    app:visibility="@{viewmodel.isLoading}" />
 
                 <TextView
                     android:id="@+id/post_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/color_post_title"
+                    android:textSize="@dimen/post_title_text_size"
                     android:layout_marginStart="@dimen/margin_border_horizontal"
                     android:layout_marginTop="8dp"
                     android:text="@{post.title}"
@@ -69,6 +56,8 @@
                     android:id="@+id/post_body"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/color_post_body"
+                    android:textSize="@dimen/post_body_text_size"
                     android:layout_marginTop="@dimen/margin_element_vertical"
                     android:text="@{post.body}"
                     app:layout_constraintBottom_toTopOf="@id/divider2"
@@ -79,9 +68,10 @@
                 <View
                     android:id="@+id/divider2"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="2dp"
                     android:layout_marginTop="8dp"
                     android:background="?android:attr/listDivider"
+                    android:backgroundTint="@color/color_primary"
                     app:layout_constraintBottom_toTopOf="@id/comment_list"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -96,6 +86,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/divider2"
+                    app:visibility="@{!viewmodel.isLoading}"
                     tools:listitem="@layout/item_comment" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
