--- a/app/src/main/res/layout/fragment_posts_list.xml
+++ b/app/src/main/res/layout/fragment_posts_list.xml
@@ -10,30 +10,6 @@
             type="com.example.mvvmattempt.ui.posts.PostsListViewModel" />
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:titleTextColor="@color/colorActionBarTitle"
-                app:elevation="4dp"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:menu="@menu/menu_main" />
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -51,7 +27,7 @@
                     tools:listitem="@layout/item_post" />
 
                 <ProgressBar
-                    style="@android:style/Widget.Material.ProgressBar.Large"
+                    style="@style/Widget.AppCompat.ProgressBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
@@ -61,6 +37,6 @@
                     app:visibility="@{viewmodel.isLoading}" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.core.widget.NestedScrollView>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+<!--        </androidx.core.widget.NestedScrollView>-->
+<!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->
 </layout>
