--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,13 @@
     <dimen name="card_elevation">4dp</dimen>
     <dimen name="card_padding">4dp</dimen>
     <dimen name="card_corner">4dp</dimen>
+
     <dimen name="margin_border_horizontal">16dp</dimen>
     <dimen name="margin_element_vertical">8dp</dimen>
+
+    <dimen name="post_title_text_size">18sp</dimen>
+    <dimen name="post_body_text_size">14sp</dimen>
+
+    <dimen name="comment_name_text_size">14sp</dimen>
+    <dimen name="comment_body_text_size">14sp</dimen>
 </resources>
