--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,27 +2,27 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/color_primary</item>
+        <item name="colorPrimaryDark">@color/color_primary_dark</item>
+        <item name="colorAccent">@color/color_accent</item>
 
         <item name="actionBarStyle">@style/AppTheme.ActionBar</item>
 
         <item name="drawerArrowStyle">@style/AppDrawerArrow</item>
     </style>
 
-    <!--    color wont change, I give up-->
+    <!-- color won't change, I give up-->
     <style name="AppTheme.ActionBar" parent="Widget.AppCompat.ActionBar">
         <item name="android:titleTextStyle">@style/AppTheme.ActionBar.TextStyle</item>
-        <item name="titleTextColor">@color/colorActionBarTitle</item>
+        <item name="titleTextColor">@color/color_action_bar_title</item>
     </style>
 
     <style name="AppTheme.ActionBar.TextStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/colorActionBarTitle</item>
+        <item name="android:textColor">@color/color_action_bar_title</item>
     </style>
 
     <style name="AppDrawerArrow" parent="Widget.AppCompat.DrawerArrowToggle">
-        <item name="color">@color/colorActionBarTitle</item>
+        <item name="color">@color/color_action_bar_title</item>
         <item name="spinBars">true</item>
     </style>
 
@@ -35,6 +35,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+
+    <!--Used when app is launching-->
     <style name="SplashTheme" parent="AppTheme.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
